--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "homepage": "https://benardelia.github.io/jobs-junction",
   "name": "frontier",
   "version": "0.1.0",
+  "homepage": "https://benardelia.github.io/jobs-junction",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^3.1.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@fontsource-variable/open-sans": "^5.1.0",
-    "@fontsource/poppins": "^5.1.0",
-    "@mui/material": "^6.1.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^11.11.17",
-    "next-themes": "^0.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0",
-    "react-script": "^2.0.5",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+  "@chakra-ui/react": "^3.1.2",
+  "@emotion/react": "^11.13.3",
+  "@emotion/styled": "^11.13.0",
+  "@fontsource-variable/open-sans": "^5.1.0",
+  "@fontsource/poppins": "^5.1.0",
+  "@mui/material": "^6.1.7",
+  "@testing-library/jest-dom": "^5.17.0",
+  "@testing-library/react": "^13.4.0",
+  "@testing-library/user-event": "^13.5.0",
+  "framer-motion": "^11.11.17",
+  "next-themes": "^0.4.3",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-icons": "^5.3.0",
+  "react-router-dom": "^6.28.0",
+  "react-script": "^2.0.5",
+  "react-scripts": "5.0.1",
+  "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "extends": [
+  "react-app",
+  "react-app/jest"
+  ]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "production": [
+  ">0.2%",
+  "not dead",
+  "not op_mini all"
+  ],
+  "development": [
+  "last 1 chrome version",
+  "last 1 firefox version",
+  "last 1 safari version"
+    
+  ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.14"
+  "gh-pages": "^6.2.0",
+  "tailwindcss": "^3.4.14"
   }
 }
