--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontier",
   "version": "0.1.0",
-  "homepage": "https://benardelia.github.io/jobs-junction/",
+  "homepage": "https://benardelia.github.io/jobs-junction",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^3.1.2",
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build --remote origin",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
